--- a/analysis/add_ranking_text.ipynb
+++ b/analysis/add_ranking_text.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -33,7 +33,8 @@
      "data": {
       "text/plain": [
        "Index(['Student_id', 'Student_Test_id', 'Result_id', 'answer', 'graph_id',\n",
-       "       'answer_text', 'question_id', 'question', 'Question_type', 'dataset'],\n",
+       "       'answer_text', 'question_id', 'question', 'Question_type', 'dataset',\n",
+       "       'test'],\n",
        "      dtype='object')"
       ]
      },
@@ -54,24 +55,89 @@
    },
    "outputs": [],
    "source": [
+    "#add condition data\n",
+    "df_sid = pd.read_csv('student_id_list.csv')\n",
+    "df_sid.Questions = df_sid.Questions.apply(lambda x: int(x))\n",
+    "df_sid.Heuristics = df_sid.Heuristics.apply(lambda x: int(x))\n",
+    "question_student_id_list = [int(x) for x in list(df_sid.Questions)]\n",
+    "heuristic_student_id_list = [int(x) for x in list(df_sid.Heuristics)]\n",
+    "\n",
+    "#convert sid's to integers\n",
+    "df.Student_id = df.Student_id.apply(lambda x: int(x))\n",
+    "\n",
+    "condition_list = []\n",
+    "for ix,data in df.iterrows():\n",
+    "    if data.Student_id in question_student_id_list:\n",
+    "        condition_list.append('question')\n",
+    "    elif data.Student_id in heuristic_student_id_list:\n",
+    "        condition_list.append('heuristic')\n",
+    "df['condition'] = condition_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#fix data in survey question rows\n",
+    "for ix, data in df.groupby(['Student_id']):\n",
+    "    for ix, row in data.iterrows():\n",
+    "        if len(str(row.Student_Test_id)) == 9:\n",
+    "            new = list(row)\n",
+    "            new[5] = row.answer\n",
+    "            new[6] = 'na'\n",
+    "            if row.condition == 'question':\n",
+    "                if '1000' in str(row.Student_Test_id):\n",
+    "                    new[7] = 'Please rate the educational value to you of answering questions as a way to assess other people’s visualizations from 1 (not useful) to 5 (very useful).'\n",
+    "                else:\n",
+    "                    new[7] = 'Given a choice, would you prefer having critiques or having objective criteria like number of correctly answered questions as feedback on your designs?'\n",
+    "            else:\n",
+    "                if '1000' in str(row.Student_Test_id):\n",
+    "                    new[7] = 'Please rate the educational value to you of critiquing visualizations as a way to assess other people’s visualizations from 1 (not useful) to 5 (very useful).'\n",
+    "                else:\n",
+    "                    new[7] = 'Given a choice, would you prefer having critiques or having objective criteria like number of correctly answered questions as feedback on your designs?'\n",
+    "            new[8] = 'post_test_survey'\n",
+    "            new[9] = 'na'\n",
+    "            new[10] = 'post_test'\n",
+    "            df = df.append(pd.DataFrame([new], columns=df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "new_df = pd.DataFrame()\n",
-    "for ix, data in df.groupby(['Student_id', 'Question_type', 'dataset',\n",
+    "for ix, data in df.groupby(['Student_id', 'test', 'dataset',\n",
     "                            'question_id']):\n",
     "    if ix[1] == 'pre_test':\n",
     "        if len(data)>3:\n",
     "            new_df = new_df.append(data.iloc[:3])\n",
     "        else:\n",
     "            new_df = new_df.append(data)\n",
-    "    else:\n",
+    "    elif ix[1] == 'post_test':\n",
+    "        if len(data)>4:\n",
+    "            new_df = new_df.append(data.iloc[:4])\n",
+    "        else:\n",
+    "            new_df = new_df.append(data)\n",
+    "    elif ix[1] == 'training':\n",
     "        if len(data)>1:\n",
     "            new_df = new_df.append(data.iloc[0])\n",
     "        else:\n",
-    "            new_df = new_df.append(data)"
+    "            new_df = new_df.append(data)\n",
+    "    else:\n",
+    "        new_df = new_df.append(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -94,12 +160,42 @@
     "new_question_text = ['(First) Each of these three visualizations cover the same data. Please rank them in the order you think reflects their overall effectiveness and design quality.',\n",
     "                    '(Second) Each of these three visualizations cover the same data. Please rank them in the order you think reflects their overall effectiveness and design quality.',\n",
     "                    '(Third) Each of these three visualizations cover the same data. Please rank them in the order you think reflects their overall effectiveness and design quality.']\n",
-    "for ix, data in new_df.groupby(['Student_id', 'Question_type', 'dataset']):\n",
+    "new_post_question_text = ['(First) Each of these three visualizations cover the same data. Please rank them in the order you think reflects their overall effectiveness and design quality.',\n",
+    "                    '(Second) Each of these three visualizations cover the same data. Please rank them in the order you think reflects their overall effectiveness and design quality.',\n",
+    "                    '(Third) Each of these three visualizations cover the same data. Please rank them in the order you think reflects their overall effectiveness and design quality.',\n",
+    "                    'Briefly describe your reasoning for this ranking']\n",
+    "post_test_questions = ['Please rate the educational value to you of answering questions as a way to assess other people’s visualizations from 1 (not useful) to 5 (very useful).',\n",
+    "                       'Given a choice, would you prefer having critiques or having objective criteria like number of correctly answered questions as feedback on your designs?',\n",
+    "                       'Please rate the educational value to you of critiquing visualizations as a way to assess other people’s visualizations from 1 (not useful) to 5 (very useful).',\n",
+    "                       'Given a choice, would you prefer having critiques or having objective criteria like number of correctly answered questions as feedback on your designs?']\n",
     "\n",
-    "    if ix[1] == 'pre_test':\n",
+    "for ix, data in new_df.groupby(['Student_id', 'Question_type', 'test', 'dataset']):\n",
+    "\n",
+    "    if ix[1] == 'pre_test' and ix[2] == 'pre_test':\n",
     "        data.answer_text = data.graph_id\n",
     "        data.question = new_question_text\n",
     "        final_df = final_df.append(data)\n",
+    "    elif ix[1] == 'pre_test' and ix[2] == 'post_test':\n",
+    "        #check if they answered the text box or not\n",
+    "        if len(data) == 3:\n",
+    "            data.answer_text = data.graph_id\n",
+    "            data.question = new_question_text\n",
+    "            final_df = final_df.append(data)\n",
+    "            #add missing text box data\n",
+    "            new = list(data.iloc[-1])\n",
+    "            new[2] = 'na'\n",
+    "            new[3] = '=BLANK='\n",
+    "            new[4] = 'na'\n",
+    "            new[5] = '=BLANK='\n",
+    "            new[6] = 'Briefly describe your reasoning for this ranking'\n",
+    "            final_df = final_df.append(pd.DataFrame([new], columns=final_df.columns))\n",
+    "        else:\n",
+    "            new_ans_text = list(data.graph_id)\n",
+    "            free_answer = list(data.answer)[-1]\n",
+    "            new_ans_text[-1] = free_answer\n",
+    "            data.answer_text = new_ans_text\n",
+    "            data.question = new_post_question_text\n",
+    "            final_df = final_df.append(data)\n",
     "    elif ix[1] == 'rating':\n",
     "        data.answer_text = data.answer\n",
     "        final_df = final_df.append(data)\n",
@@ -109,41 +205,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#add condition data\n",
-    "df_sid = pd.read_csv('student_id_list.csv')\n",
-    "df_sid.Questions = df_sid.Questions.apply(lambda x: int(x))\n",
-    "df_sid.Heuristics = df_sid.Heuristics.apply(lambda x: int(x))\n",
-    "question_student_id_list = [int(x) for x in list(df_sid.Questions)]\n",
-    "heuristic_student_id_list = [int(x) for x in list(df_sid.Heuristics)]\n",
+    "# #add condition data\n",
+    "# df_sid = pd.read_csv('student_id_list.csv')\n",
+    "# df_sid.Questions = df_sid.Questions.apply(lambda x: int(x))\n",
+    "# df_sid.Heuristics = df_sid.Heuristics.apply(lambda x: int(x))\n",
+    "# question_student_id_list = [int(x) for x in list(df_sid.Questions)]\n",
+    "# heuristic_student_id_list = [int(x) for x in list(df_sid.Heuristics)]\n",
     "\n",
-    "condition_list = []\n",
-    "for ix,data in final_df.iterrows():\n",
-    "    if data.Student_id in question_student_id_list:\n",
-    "        condition_list.append('question')\n",
-    "    elif data.Student_id in heuristic_student_id_list:\n",
-    "        condition_list.append('heuristic')"
+    "# #convert sid's to integers\n",
+    "# final_df.Student_id = final_df.Student_id.apply(lambda x: int(x))\n",
+    "\n",
+    "# condition_list = []\n",
+    "# for ix,data in final_df.iterrows():\n",
+    "#     if data.Student_id in question_student_id_list:\n",
+    "#         condition_list.append('question')\n",
+    "#     elif data.Student_id in heuristic_student_id_list:\n",
+    "#         condition_list.append('heuristic')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "final_df.condition = condition_list"
+    "#final_df['condition'] = condition_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -166,6 +265,8 @@
        "      <th>question</th>\n",
        "      <th>Question_type</th>\n",
        "      <th>dataset</th>\n",
+       "      <th>test</th>\n",
+       "      <th>condition</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -181,6 +282,8 @@
        "      <td>This visualization uses visual components appr...</td>\n",
        "      <td>heuristic</td>\n",
        "      <td>0</td>\n",
+       "      <td>training</td>\n",
+       "      <td>heuristic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>761</th>\n",
@@ -194,6 +297,8 @@
        "      <td>This visualization makes important information...</td>\n",
        "      <td>heuristic</td>\n",
        "      <td>0</td>\n",
+       "      <td>training</td>\n",
+       "      <td>heuristic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>767</th>\n",
@@ -207,6 +312,8 @@
        "      <td>This visualization successfully presents multi...</td>\n",
        "      <td>heuristic</td>\n",
        "      <td>0</td>\n",
+       "      <td>training</td>\n",
+       "      <td>heuristic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>606</th>\n",
@@ -220,6 +327,8 @@
        "      <td>This visualization uses visual components appr...</td>\n",
        "      <td>heuristic</td>\n",
        "      <td>2</td>\n",
+       "      <td>training</td>\n",
+       "      <td>heuristic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>747</th>\n",
@@ -233,35 +342,37 @@
        "      <td>This visualization makes important information...</td>\n",
        "      <td>heuristic</td>\n",
        "      <td>2</td>\n",
+       "      <td>training</td>\n",
+       "      <td>heuristic</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Student_id  Student_Test_id  Result_id answer  graph_id answer_text  \\\n",
-       "759       11814              549        907     63         1     neutral   \n",
-       "761       11814              550        909     72         1    disagree   \n",
-       "767       11814              551        917     83         1     neutral   \n",
-       "606       11814              541        744    262        22    disagree   \n",
-       "747       11814              542        891    273        22     neutral   \n",
+       "     Student_id  Student_Test_id  Result_id answer graph_id answer_text  \\\n",
+       "759       11814              549        907     63        1     neutral   \n",
+       "761       11814              550        909     72        1    disagree   \n",
+       "767       11814              551        917     83        1     neutral   \n",
+       "606       11814              541        744    262       22    disagree   \n",
+       "747       11814              542        891    273       22     neutral   \n",
        "\n",
-       "     question_id                                           question  \\\n",
-       "759            6  This visualization uses visual components appr...   \n",
-       "761            7  This visualization makes important information...   \n",
-       "767            8  This visualization successfully presents multi...   \n",
-       "606           26  This visualization uses visual components appr...   \n",
-       "747           27  This visualization makes important information...   \n",
+       "    question_id                                           question  \\\n",
+       "759           6  This visualization uses visual components appr...   \n",
+       "761           7  This visualization makes important information...   \n",
+       "767           8  This visualization successfully presents multi...   \n",
+       "606          26  This visualization uses visual components appr...   \n",
+       "747          27  This visualization makes important information...   \n",
        "\n",
-       "    Question_type  dataset  \n",
-       "759     heuristic        0  \n",
-       "761     heuristic        0  \n",
-       "767     heuristic        0  \n",
-       "606     heuristic        2  \n",
-       "747     heuristic        2  "
+       "    Question_type dataset      test  condition  \n",
+       "759     heuristic       0  training  heuristic  \n",
+       "761     heuristic       0  training  heuristic  \n",
+       "767     heuristic       0  training  heuristic  \n",
+       "606     heuristic       2  training  heuristic  \n",
+       "747     heuristic       2  training  heuristic  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
